notification part done (issue #151)

--- a/templates/header.html
+++ b/templates/header.html
@@ -8,12 +8,18 @@
     <div class="notification_popup_content">
     {% if user.id|get_notification %}
         {% for notification in user.id|get_notification %}
+            {{ notification.id|read_notification }}
             <div class="notification_each_wrapper">
                 <div class="notification_each">
-                    {{ notification.actor }}님이 작업을 진행하셨습니다.<br>
-                    {{ notification.timestamp|date:"y.m.d" }}/{{ notification.verb }}
+                    <a href="/product/order">
+                        {{ notification.actor.name }}님이 {{ notification.description }}<br>
+                        {{ notification.timestamp|date:"y.m.d" }} / {{ notification.verb }}
+                    </a>
                 </div>
             </div>
+            {% if not forloop.last %}
+            <hr style="width:90%;">
+            {% endif %}
         {% endfor %}
     {% else %}
         알림이 없습니다.
@@ -58,9 +64,16 @@
                 <a id="message" href="{% url 'message_lounge' %}">
                     <img src="{% static 'img/ver1.5/message.png' %}">
                 </a>
-                <a id="notification">
-                    <img src="{% static 'img/ver1.5/bell.png' %}">
-                </a>
+                {% if unread_count %}
+                    <i class="fa fa-circle" aria-hidden="true"></i>
+                    <a id="notification">
+                        <img src="{% static 'img/ver1.5/bell.png' %}">
+                    </a>
+                {% else %}
+                    <a id="notification">
+                        <img src="{% static 'img/ver1.5/bell.png' %}">
+                    </a>
+                {% endif %}
                 <a id="header-profile" href="#">
                     <img class="profile-image" src="{{ user.get_avatar }}">
                 </a>
@@ -128,6 +141,7 @@
     $('#notification').on('click', function () {
         if (notification_flag){
             $('.notification_popup_wrapper').show();
+            $('.fa.fa-circle').hide();
             notification_flag = false;
         }else{
             $('.notification_popup_wrapper').hide();
