--- a/static/css/header.css
+++ b/static/css/header.css
@@ -335,22 +335,30 @@ _:-ms-lang(x), .dropdown-selected {
     top:65px;
     right:10%;
     background-color: #f2f2f2;
-    width:25%;
-    height:400px;
+    width:365px;
+    height:auto;
+    max-height:335px;
     border:1px solid #f1f1f1;
+    z-index: 10;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
 
 .notification_popup_wrapper .notification_popup_title{
     width:100%;
-    height:6%;
+    height:22px;
     padding-top:2%;
     text-align: center;
+}
+
+_:-ms-lang(x), .notification_popup_wrapper .notification_popup_title {
+    padding-bottom:2%;
 }
 
 .notification_popup_wrapper .notification_popup_content {
     width:100%;
     background-color: white;
-    height:92%;
+    height:auto;
+    max-height:313px;
     overflow-y: scroll;
 }
 
@@ -360,6 +368,7 @@ _:-ms-lang(x), .dropdown-selected {
 
 .notification_popup_content .notification_each_wrapper .notification_each:nth-child(1){
     margin-top:20px;
+    font-size: 14px;
 }
 
 .notification_popup_content .notification_each_wrapper .notification_each{
@@ -367,4 +376,12 @@ _:-ms-lang(x), .dropdown-selected {
     margin-left: 5%;
     margin-top:10px;
     margin-bottom: 10px;
+}
+
+.fa.fa-circle{
+    position: absolute;
+    top:10px;
+    margin-left:50px;
+    font-size: 10px;
+    color:darkslategrey;
 }
