--- a/templates/header.html
+++ b/templates/header.html
@@ -65,7 +65,7 @@
                     <img src="{% static 'img/ver1.5/message.png' %}">
                 </a>
                 {% if unread_count %}
-                    <i class="fa fa-circle" aria-hidden="true"></i>
+                    <i class="fa fa-circle bell" aria-hidden="true"></i>
                     <a id="notification">
                         <img src="{% static 'img/ver1.5/bell.png' %}">
                     </a>
