profit_manage profit history part (not completed)

--- a/static/css/dashboard/seller/profit.css
+++ b/static/css/dashboard/seller/profit.css
@@ -200,3 +200,30 @@
 .profit-info-left.withdrawal input{
     width:20%;
 }
+
+.profit-history-nav {
+    margin-top: 25px;
+    margin-left: 25px;
+}
+
+.profit-history-nav li {
+    display: inline-block;
+    font-size: 14px;
+    color: rgba(0, 0, 0, .6);
+    font-weight: 600;
+    text-align: center;
+    cursor: pointer;
+    margin-right: 30px;
+}
+
+.profit-history-nav .active {
+    color: #648efc;
+}
+
+.profit-history {
+    margin-top: 10px;
+    border: 2px solid #DADADA;
+    width: 561px;
+    min-height: 252px;
+    text-align: center;
+}
