--- a/templates/seller/profit_manage.html
+++ b/templates/seller/profit_manage.html
@@ -118,5 +118,22 @@
                 </div>
             </form>
         </div>
+{#        <div class="profit-history-nav">#}
+{#            <ul>#}
+{#                <li class="active status_0_menu">거래내역</li>#}
+{#                <li class="status_1_menu">출금내역</li>#}
+{#            </ul>#}
+{#        </div>#}
+{#        <div class="profit-history">#}
+{#            <div class="order-history">#}
+{#                <ul class="order-history-ul">#}
+{#                    <li class="order-history number">번호</li>#}
+{#                    <li class="order-history date">거래날짜</li>#}
+{#                    <li class="order-history service_title">서비스 제목</li>#}
+{#                    <li class="order-history buyer_id">구매자 ID</li>#}
+{#                    <li class="order-history price">판매금액</li>#}
+{#                </ul>#}
+{#            </div>#}
+{#        </div>#}
     </div>
 {% endblock %}
