review requirements fix (issue #290)

--- a/templates/account/dashboard_purchase_list.html
+++ b/templates/account/dashboard_purchase_list.html
@@ -946,7 +946,7 @@
                                             <div class="review_form_content satisfy" style="clear:both;">
                                                 <div class="review_form_content_title">
                                                     세부 평가<br>
-                                                    (선택)
+                                                    <span style="color:#648efc;">(필수)</span>
                                                 </div>
                                                 <div class="review_form_content_input">
                                                     <span class="satisfy_title_each">콘텐츠</span>{{ each_review_form.contents_satisfy }}<br>
