--- a/templates/account/account_detail.html
+++ b/templates/account/account_detail.html
@@ -126,6 +126,30 @@
             $('.graph-part.kindness .graph-text li:nth-child(3)').css('width', 15 + '%');
             $('.graph-part.kindness .graph-text li:nth-child(3)').css('float', 'right');
         }
+        if (contents_satisfy_total==0){
+        $('.graph-part.contents .graph-text li:nth-child(1)').css('width', 33 + '%');
+        $('.graph-part.contents .graph-text li:nth-child(2)').css('width', 33 + '%');
+        $('.graph-part.contents .graph-text li:nth-child(3)').css('width', 33 + '%');
+        $('.graph-part.contents .graph-text li:nth-child(1)').text('만족 (' + 0 + '%)');
+        $('.graph-part.contents .graph-text li:nth-child(2)').text('보통 (' + 0 + '%)');
+        $('.graph-part.contents .graph-text li:nth-child(3)').text('불만족 (' + 0 + '%)');
+        }
+        if (ads_satisfy_total==0){
+            $('.graph-part.ads .graph-text li:nth-child(1)').css('width', 33 + '%');
+            $('.graph-part.ads .graph-text li:nth-child(2)').css('width', 33 + '%');
+            $('.graph-part.ads .graph-text li:nth-child(3)').css('width', 33 + '%');
+            $('.graph-part.ads .graph-text li:nth-child(1)').text('만족 (' + 0 + '%)');
+            $('.graph-part.ads .graph-text li:nth-child(2)').text('보통 (' + 0 + '%)');
+            $('.graph-part.ads .graph-text li:nth-child(3)').text('불만족 (' + 0 + '%)');
+        }
+        if (kindness_satisfy_total==0){
+            $('.graph-part.kindness .graph-text li:nth-child(1)').css('width', 33 + '%');
+            $('.graph-part.kindness .graph-text li:nth-child(2)').css('width', 33 + '%');
+            $('.graph-part.kindness .graph-text li:nth-child(3)').css('width', 33 + '%');
+            $('.graph-part.kindness .graph-text li:nth-child(1)').text('만족 (' + 0 + '%)');
+            $('.graph-part.kindness .graph-text li:nth-child(2)').text('보통 (' + 0 + '%)');
+            $('.graph-part.kindness .graph-text li:nth-child(3)').text('불만족 (' + 0 + '%)');
+        }
 
 
         $('.graph-text li').each(function(){
@@ -231,9 +255,9 @@
                             콘텐츠
                         </div>
                         <div class="stacked-bar-graph">
-                          <span style="width:40%" class="bar-1"></span>
-                          <span style="width:40%" class="bar-2"></span>
-                          <span style="width:20%" class="bar-3"></span>
+                          <span style="width:33%" class="bar-1"></span>
+                          <span style="width:33%" class="bar-2"></span>
+                          <span style="width:33%" class="bar-3"></span>
                         </div>
                         <div class="graph-text">
                             <ul>
@@ -248,9 +272,9 @@
                             광고효과
                         </div>
                         <div class="stacked-bar-graph">
-                          <span style="width:34%" class="bar-1"></span>
-                          <span style="width:46%" class="bar-2"></span>
-                          <span style="width:20%" class="bar-3"></span>
+                          <span style="width:33%" class="bar-1"></span>
+                          <span style="width:33%" class="bar-2"></span>
+                          <span style="width:33%" class="bar-3"></span>
                         </div>
                         <div class="graph-text">
                             <ul>
@@ -265,9 +289,9 @@
                             친절도
                         </div>
                         <div class="stacked-bar-graph">
-                          <span style="width:34%" class="bar-1"></span>
-                          <span style="width:40%" class="bar-2"></span>
-                          <span style="width:26%" class="bar-3"></span>
+                          <span style="width:33%" class="bar-1"></span>
+                          <span style="width:33%" class="bar-2"></span>
+                          <span style="width:33%" class="bar-3"></span>
                         </div>
                         <div class="graph-text">
                             <ul>
