unfill star in account_detail (issue #281)

--- a/static/css/dashboard/account_detail.css
+++ b/static/css/dashboard/account_detail.css
@@ -161,7 +161,7 @@
     color: #e8e8e8;
 }
 
-.detail_content_wrapper_mid .detail_content_mid_left .seller-rating .fa {
+.detail_content_wrapper_mid .detail_content_mid_left .seller-rating .fa.active {
     color: #FEDD43;
 }
 
