--- a/templates/account/dashboard_success.html
+++ b/templates/account/dashboard_success.html
@@ -13,7 +13,7 @@
         <div class="dashboard-billing result">
             <h1>결제가 완료되었습니다.</h1>
             <p>소셜업을 이용해 주셔서 감사합니다.</p>
-            <a href="/">상품 보러가기</a>
+            <a href="/dashboard/purchase/list">구매관리 가기</a>
         </div>
     </div>
 {% endblock %}
