add link in purchase_list, order_mange to product (issue #285)

--- a/templates/seller/order_manage.html
+++ b/templates/seller/order_manage.html
@@ -93,7 +93,7 @@
                                 <div class="product_item_each_wrapper">
                                     <ul class="purchase-table-ul">
                                         <li class="table_product number">{{ order_item.cart_item.item.id }}</li>
-                                        <li class="table_product name">{{ order_item.cart_item.item.oneline_intro }}</li>
+                                        <li class="table_product name"><a href="/product/{{ order_item.cart_item.item.id }}">{{ order_item.cart_item.item.oneline_intro }}</a></li>
                                         <li class="table_product buyer_id">{{ order_item.user.get_short_name }}</li>
                                         <li class="table_product when_purchase">{{ order_item.order.timestamp|date:"m.d" }}</li>
                                         <li class="table_product working_status">{{ order_item.status_in_korean }}</li>
@@ -143,7 +143,7 @@
                                         </div>
                                         <div class="table_product_detail_right">
                                             <div class="table_product_detail_right_title">
-                                                <h2>[{{ order_item.cart_item.item.id }}]{{ order_item.cart_item.item.oneline_intro }}</h2>
+                                                <a href="/product/{{ order_item.cart_item.item.id }}"><h2>[{{ order_item.cart_item.item.id }}]{{ order_item.cart_item.item.oneline_intro }}</h2></a>
                                                 <p>주문번호:{{ order_item.order.order_id }} &nbsp  구매자:{{ order_item.user.get_short_name }} &nbsp 구매날짜:{{ order_item.order.timestamp|date:"m.d" }} </p>
                                                 <p>결제금액:{{ order_item.cart_item.line_item_total }} &nbsp 결제수단:{{ order_item.order.type }}</p>
                                             </div>
@@ -302,7 +302,7 @@
                                 <div class="product_item_each_wrapper">
                                     <ul class="purchase-table-ul">
                                         <li class="table_product number">{{ order_item.cart_item.item.id }}</li>
-                                        <li class="table_product name">{{ order_item.cart_item.item.oneline_intro }}</li>
+                                        <li class="table_product name"><a href="/product/{{ order_item.cart_item.item.id }}">{{ order_item.cart_item.item.oneline_intro }}</a></li>
                                         <li class="table_product buyer_id">{{ order_item.user.get_short_name }}</li>
                                         <li class="table_product when_purchase">{{ order_item.order.timestamp|date:"m.d" }}</li>
                                         <li class="table_product price">{{ order_item.cart_item.line_item_total }}</li>
@@ -359,7 +359,7 @@
                                         </div>
                                         <div class="table_product_detail_right">
                                             <div class="table_product_detail_right_title">
-                                                <h2>[{{ order_item.cart_item.item.id }}]{{ order_item.cart_item.item.oneline_intro }}</h2>
+                                                <a href="/product/{{ order_item.cart_item.item.id }}"><h2>[{{ order_item.cart_item.item.id }}]{{ order_item.cart_item.item.oneline_intro }}</h2></a>
                                                 <p>주문번호:{{ order_item.order.order_id }} &nbsp  구매자:{{ order_item.user.get_short_name }} &nbsp 구매날짜:{{ order_item.order.timestamp|date:"m.d" }} </p>
                                                 <p>결제금액:{{ order_item.cart_item.line_item_total }} &nbsp 결제수단:{{ order_item.order.type }}</p>
                                             </div>
@@ -512,7 +512,7 @@
                                 <div class="product_item_each_wrapper">
                                     <ul class="purchase-table-ul">
                                         <li class="table_product number">{{ order_item.cart_item.item.id }}</li>
-                                        <li class="table_product name">{{ order_item.cart_item.item.oneline_intro }}</li>
+                                        <li class="table_product name"><a href="/product/{{ order_item.cart_item.item.id }}">{{ order_item.cart_item.item.oneline_intro }}</a></li>
                                         <li class="table_product buyer_id">{{ order_item.user.get_short_name }}</li>
                                         <li class="table_product when_purchase">{{ order_item.order.timestamp|date:"m.d" }}</li>
                                         <li class="table_product price">{{ order_item.cart_item.line_item_total }}</li>
@@ -569,7 +569,7 @@
                                         </div>
                                         <div class="table_product_detail_right">
                                             <div class="table_product_detail_right_title">
-                                                <h2>[{{ order_item.cart_item.item.id }}]{{ order_item.cart_item.item.oneline_intro }}</h2>
+                                                <a href="/product/{{ order_item.cart_item.item.id }}"><h2>[{{ order_item.cart_item.item.id }}]{{ order_item.cart_item.item.oneline_intro }}</h2></a>
                                                 <p>주문번호:{{ order_item.order.order_id }} &nbsp  구매자:{{ order_item.user.get_short_name }} &nbsp 구매날짜:{{ order_item.order.timestamp|date:"m.d" }} </p>
                                                 <p>결제금액:{{ order_item.cart_item.line_item_total }} &nbsp 결제수단:{{ order_item.order.type }}</p>
                                             </div>
@@ -700,7 +700,7 @@
                                 <div class="product_item_each_wrapper">
                                     <ul class="purchase-table-ul">
                                         <li class="table_product number">{{ order_item.cart_item.item.id }}</li>
-                                        <li class="table_product name">{{ order_item.cart_item.item.oneline_intro }}</li>
+                                        <li class="table_product name"><a href="/product/{{ order_item.cart_item.item.id }}">{{ order_item.cart_item.item.oneline_intro }}</a></li>
                                         <li class="table_product buyer_id">{{ order_item.user.get_short_name }}</li>
                                         <li class="table_product when_purchase">{{ order_item.order.timestamp|date:"m.d" }}</li>
                                         <li class="table_product price">{{ order_item.cart_item.line_item_total }}</li>
@@ -756,7 +756,7 @@
                                         </div>
                                         <div class="table_product_detail_right">
                                             <div class="table_product_detail_right_title">
-                                                <h2>[{{ order_item.cart_item.item.id }}]{{ order_item.cart_item.item.oneline_intro }}</h2>
+                                                <a href="/product/{{ order_item.cart_item.item.id }}"><h2>[{{ order_item.cart_item.item.id }}]{{ order_item.cart_item.item.oneline_intro }}</h2></a>
                                                 <p>주문번호:{{ order_item.order.order_id }} &nbsp  구매자:{{ order_item.user.get_short_name }} &nbsp 구매날짜:{{ order_item.order.timestamp|date:"m.d" }} </p>
                                                 <p>결제금액:{{ order_item.cart_item.line_item_total }} &nbsp 결제수단:{{ order_item.order.type }}</p>
                                             </div>
@@ -839,7 +839,7 @@
                                 <div class="product_item_each_wrapper">
                                     <ul class="purchase-table-ul">
                                         <li class="table_product number">{{ order_item.cart_item.item.id }}</li>
-                                        <li class="table_product name">{{ order_item.cart_item.item.oneline_intro }}</li>
+                                        <li class="table_product name"><a href="/product/{{ order_item.cart_item.item.id }}">{{ order_item.cart_item.item.oneline_intro }}</a></li>
                                         <li class="table_product buyer_id">{{ order_item.user.get_short_name }}</li>
                                         <li class="table_product when_purchase">{{ order_item.order.timestamp|date:"m.d" }}</li>
                                         <li class="table_product price">{{ order_item.cart_item.line_item_total }}</li>
@@ -895,7 +895,7 @@
                                         </div>
                                         <div class="table_product_detail_right">
                                             <div class="table_product_detail_right_title">
-                                                <h2>[{{ order_item.cart_item.item.id }}]{{ order_item.cart_item.item.oneline_intro }}</h2>
+                                                <a href="/product/{{ order_item.cart_item.item.id }}"><h2>[{{ order_item.cart_item.item.id }}]{{ order_item.cart_item.item.oneline_intro }}</h2></a>
                                                 <p>주문번호:{{ order_item.order.order_id }} &nbsp  구매자:{{ order_item.user.get_short_name }} &nbsp 구매날짜:{{ order_item.order.timestamp|date:"m.d" }} </p>
                                                 <p>결제금액:{{ order_item.cart_item.line_item_total }} &nbsp 결제수단:{{ order_item.order.type }}</p>
                                             </div>
@@ -978,7 +978,7 @@
                                 <div class="product_item_each_wrapper">
                                     <ul class="purchase-table-ul refund">
                                         <li class="table_product number">{{ order_item.cart_item.item.id }}</li>
-                                        <li class="table_product name">{{ order_item.cart_item.item.oneline_intro }}</li>
+                                        <li class="table_product name"><a href="/product/{{ order_item.cart_item.item.id }}">{{ order_item.cart_item.item.oneline_intro }}</a></li>
                                         <li class="table_product buyer_id">{{ order_item.user.get_short_name }}</li>
                                         <li class="table_product when_purchase">{{ order_item.order.timestamp|date:"m.d" }}</li>
                                         <li class="table_product price">{{ order_item.cart_item.line_item_total }}</li>
@@ -1028,7 +1028,7 @@
                                         </div>
                                         <div class="table_product_detail_right">
                                             <div class="table_product_detail_right_title">
-                                                <h2>[{{ order_item.cart_item.item.id }}]{{ order_item.cart_item.item.oneline_intro }}</h2>
+                                                <a href="/product/{{ order_item.cart_item.item.id }}"><h2>[{{ order_item.cart_item.item.id }}]{{ order_item.cart_item.item.oneline_intro }}</h2></a>
                                                 <p>주문번호:{{ order_item.order.order_id }} &nbsp  구매자:{{ order_item.user.get_short_name }} &nbsp 구매날짜:{{ order_item.order.timestamp|date:"m.d" }} </p>
                                                 <p>결제금액:{{ order_item.cart_item.line_item_total }} &nbsp 결제수단:{{ order_item.order.type }}</p>
                                             </div>
@@ -1097,7 +1097,7 @@
                             <div class="product_item_each_wrapper">
                                 <ul class="purchase-table-ul refund">
                                     <li class="table_product number">{{ order_item.cart_item.item.id }}</li>
-                                    <li class="table_product name">{{ order_item.cart_item.item.oneline_intro }}</li>
+                                    <li class="table_product name"><a href="/product/{{ order_item.cart_item.item.id }}">{{ order_item.cart_item.item.oneline_intro }}</a></li>
                                     <li class="table_product buyer_id">{{ order_item.user.get_short_name }}</li>
                                     <li class="table_product when_purchase">{{ order_item.order.timestamp|date:"m.d" }}</li>
                                     <li class="table_product price">{{ order_item.cart_item.line_item_total }}</li>
@@ -1147,7 +1147,7 @@
                                     </div>
                                     <div class="table_product_detail_right">
                                         <div class="table_product_detail_right_title">
-                                            <h2>[{{ order_item.cart_item.item.id }}]{{ order_item.cart_item.item.oneline_intro }}</h2>
+                                            <a href="/product/{{ order_item.cart_item.item.id }}"><h2>[{{ order_item.cart_item.item.id }}]{{ order_item.cart_item.item.oneline_intro }}</h2></a>
                                             <p>주문번호:{{ order_item.order.order_id }} &nbsp  구매자:{{ order_item.user.get_short_name }} &nbsp 구매날짜:{{ order_item.order.timestamp|date:"m.d" }} </p>
                                             <p>결제금액:{{ order_item.cart_item.line_item_total }} &nbsp 결제수단:{{ order_item.order.type }}</p>
                                         </div>
