--- a/templates/account/dashboard_purchase_list.html
+++ b/templates/account/dashboard_purchase_list.html
@@ -129,7 +129,7 @@
                                 <div class="product_item_each_wrapper">
                                     <ul class="purchase-table-ul">
                                         <li class="table_product number">{{ order_item.cart_item.item.id }}</li>
-                                        <li class="table_product name">{{ order_item.cart_item.item.oneline_intro }}</li>
+                                        <li class="table_product name"><a href="/product/{{ order_item.cart_item.item.id }}">{{ order_item.cart_item.item.oneline_intro }}</a></li>
                                         <li class="table_product seller_id">{{ order_item.cart_item.item.seller.user.get_short_name }}</li>
                                         <li class="table_product when_purchase">{{ order_item.order.timestamp|date:"m.d" }}</li>
                                         <li class="table_product working_status">{{ order_item.status_in_korean }}</li>
@@ -179,7 +179,7 @@
                                         </div>
                                         <div class="table_product_detail_right">
                                             <div class="table_product_detail_right_title">
-                                                <h2>[{{ order_item.cart_item.item.id }}]{{ order_item.cart_item.item.oneline_intro }}</h2>
+                                                <a href="/product/{{ order_item.cart_item.item.id }}"><h2>[{{ order_item.cart_item.item.id }}]{{ order_item.cart_item.item.oneline_intro }}</h2></a>
                                                 <p>주문번호:{{ order_item.order.order_id }} &nbsp  판매자:{{ order_item.cart_item.item.seller.user.get_short_name }} &nbsp 구매날짜:{{ order_item.order.timestamp|date:"m.d" }} </p>
                                                 <p>결제금액:{{ order_item.cart_item.line_item_total }} &nbsp 결제수단:{{ order_item.order.type }}</p>
                                             </div>
@@ -315,7 +315,7 @@
                                 <div class="product_item_each_wrapper">
                                     <ul class="purchase-table-ul">
                                         <li class="table_product number">{{ order_item.cart_item.item.id }}</li>
-                                        <li class="table_product name">{{ order_item.cart_item.item.oneline_intro }}</li>
+                                        <li class="table_product name"><a href="/product/{{ order_item.cart_item.item.id }}">{{ order_item.cart_item.item.oneline_intro }}</a></li>
                                         <li class="table_product seller_id">{{ order_item.cart_item.item.seller.user.get_short_name }}</li>
                                         <li class="table_product when_purchase">{{ order_item.order.timestamp|date:"m.d" }}</li>
                                         <li class="table_product price">{{ order_item.cart_item.line_item_total }}</li>
@@ -372,7 +372,7 @@
                                         </div>
                                         <div class="table_product_detail_right">
                                             <div class="table_product_detail_right_title">
-                                                <h2>[{{ order_item.cart_item.item.id }}]{{ order_item.cart_item.item.oneline_intro }}</h2>
+                                                <a href="/product/{{ order_item.cart_item.item.id }}"><h2>[{{ order_item.cart_item.item.id }}]{{ order_item.cart_item.item.oneline_intro }}</h2></a>
                                                 <p>주문번호:{{ order_item.order.order_id }} &nbsp  판매자:{{ order_item.cart_item.item.seller.user.get_short_name }} &nbsp 구매날짜:{{ order_item.order.timestamp|date:"m.d" }} </p>
                                                 <p>결제금액:{{ order_item.cart_item.line_item_total }} &nbsp 결제수단:{{ order_item.order.type }}</p>
                                             </div>
@@ -504,7 +504,7 @@
                                 <div class="product_item_each_wrapper">
                                     <ul class="purchase-table-ul">
                                         <li class="table_product number">{{ order_item.cart_item.item.id }}</li>
-                                        <li class="table_product name">{{ order_item.cart_item.item.oneline_intro }}</li>
+                                        <li class="table_product name"><a href="/product/{{ order_item.cart_item.item.id }}">{{ order_item.cart_item.item.oneline_intro }}</a></li>
                                         <li class="table_product seller_id">{{ order_item.cart_item.item.seller.user.get_short_name }}</li>
                                         <li class="table_product when_purchase">{{ order_item.order.timestamp|date:"m.d" }}</li>
                                         <li class="table_product price">{{ order_item.cart_item.line_item_total }}</li>
@@ -561,7 +561,7 @@
                                         </div>
                                         <div class="table_product_detail_right">
                                             <div class="table_product_detail_right_title">
-                                                <h2>[{{ order_item.cart_item.item.id }}]{{ order_item.cart_item.item.oneline_intro }}</h2>
+                                                <a href="/product/{{ order_item.cart_item.item.id }}"><h2>[{{ order_item.cart_item.item.id }}]{{ order_item.cart_item.item.oneline_intro }}</h2></a>
                                                 <p>주문번호:{{ order_item.order.order_id }} &nbsp  판매자:{{ order_item.cart_item.item.seller.user.get_short_name }} &nbsp 구매날짜:{{ order_item.order.timestamp|date:"m.d" }} </p>
                                                 <p>결제금액:{{ order_item.cart_item.line_item_total }} &nbsp 결제수단:{{ order_item.order.type }}</p>
                                             </div>
@@ -671,7 +671,7 @@
                                 <div class="product_item_each_wrapper">
                                     <ul class="purchase-table-ul">
                                         <li class="table_product number">{{ order_item.cart_item.item.id }}</li>
-                                        <li class="table_product name">{{ order_item.cart_item.item.oneline_intro }}</li>
+                                        <li class="table_product name"><a href="/product/{{ order_item.cart_item.item.id }}">{{ order_item.cart_item.item.oneline_intro }}</a></li>
                                         <li class="table_product seller_id">{{ order_item.cart_item.item.seller.user.get_short_name }}</li>
                                         <li class="table_product when_purchase">{{ order_item.order.timestamp|date:"m.d" }}</li>
                                         <li class="table_product price">{{ order_item.cart_item.line_item_total }}</li>
@@ -728,7 +728,7 @@
                                         </div>
                                         <div class="table_product_detail_right">
                                             <div class="table_product_detail_right_title">
-                                                <h2>[{{ order_item.cart_item.item.id }}]{{ order_item.cart_item.item.oneline_intro }}</h2>
+                                                <a href="/product/{{ order_item.cart_item.item.id }}"><h2>[{{ order_item.cart_item.item.id }}]{{ order_item.cart_item.item.oneline_intro }}</h2></a>
                                                 <p>주문번호:{{ order_item.order.order_id }} &nbsp  판매자:{{ order_item.cart_item.item.seller.user.get_short_name }} &nbsp 구매날짜:{{ order_item.order.timestamp|date:"m.d" }} </p>
                                                 <p>결제금액:{{ order_item.cart_item.line_item_total }} &nbsp 결제수단:{{ order_item.order.type }}</p>
                                             </div>
@@ -839,7 +839,7 @@
                                 <div class="product_item_each_wrapper">
                                     <ul class="purchase-table-ul">
                                         <li class="table_product number">{{ order_item.cart_item.item.id }}</li>
-                                        <li class="table_product name">{{ order_item.cart_item.item.oneline_intro }}</li>
+                                        <li class="table_product name"><a href="/product/{{ order_item.cart_item.item.id }}">{{ order_item.cart_item.item.oneline_intro }}</a></li>
                                         <li class="table_product seller_id">{{ order_item.cart_item.item.seller.user.get_short_name }}</li>
                                         <li class="table_product when_purchase">{{ order_item.order.timestamp|date:"m.d" }}</li>
                                         <li class="table_product price">{{ order_item.cart_item.line_item_total }}</li>
@@ -984,7 +984,7 @@
                                         </div>
                                         <div class="table_product_detail_right">
                                             <div class="table_product_detail_right_title">
-                                                <h2>[{{ order_item.cart_item.item.id }}]{{ order_item.cart_item.item.oneline_intro }}</h2>
+                                                <a href="/product/{{ order_item.cart_item.item.id }}"><h2>[{{ order_item.cart_item.item.id }}]{{ order_item.cart_item.item.oneline_intro }}</h2></a>
                                                 <p>주문번호:{{ order_item.order.order_id }} &nbsp  판매자:{{ order_item.cart_item.item.seller.user.get_short_name }} &nbsp 구매날짜:{{ order_item.order.timestamp|date:"m.d" }} </p>
                                                 <p style="display: inline-block;">결제금액:{{ order_item.cart_item.line_item_total }} &nbsp 결제수단:{{ order_item.order.type }}</p>
                                                 <form target="_blank" action="{% url 'purchase_list' %}" method="post" class="transaction_details_form">{% csrf_token %}
@@ -1078,7 +1078,7 @@
                             <div class="product_item_each_wrapper">
                                 <ul class="purchase-table-ul refund">
                                     <li class="table_product number">{{ order_item.cart_item.item.id }}</li>
-                                    <li class="table_product name">{{ order_item.cart_item.item.oneline_intro }}</li>
+                                    <li class="table_product name"><a href="/product/{{ order_item.cart_item.item.id }}">{{ order_item.cart_item.item.oneline_intro }}</a></li>
                                     <li class="table_product seller_id">{{ order_item.cart_item.item.seller.user.get_short_name }}</li>
                                     <li class="table_product when_purchase">{{ order_item.order.timestamp|date:"m.d" }}</li>
                                     <li class="table_product price">{{ order_item.cart_item.line_item_total }}</li>
@@ -1128,7 +1128,7 @@
                                     </div>
                                     <div class="table_product_detail_right">
                                         <div class="table_product_detail_right_title">
-                                            <h2>[{{ order_item.cart_item.item.id }}]{{ order_item.cart_item.item.oneline_intro }}</h2>
+                                            <a href="/product/{{ order_item.cart_item.item.id }}"><h2>[{{ order_item.cart_item.item.id }}]{{ order_item.cart_item.item.oneline_intro }}</h2></a>
                                             <p>주문번호:{{ order_item.order.order_id }} &nbsp  판매자:{{ order_item.cart_item.item.seller.user.get_short_name }} &nbsp 구매날짜:{{ order_item.order.timestamp|date:"m.d" }} </p>
                                             <p>결제금액:{{ order_item.cart_item.line_item_total }} &nbsp 결제수단:{{ order_item.order.type }}</p>
                                         </div>
@@ -1202,7 +1202,7 @@
                             <div class="product_item_each_wrapper">
                                 <ul class="purchase-table-ul refund">
                                     <li class="table_product number">{{ order_item.cart_item.item.id }}</li>
-                                    <li class="table_product name">{{ order_item.cart_item.item.oneline_intro }}</li>
+                                    <li class="table_product name"><a href="/product/{{ order_item.cart_item.item.id }}">{{ order_item.cart_item.item.oneline_intro }}</a></li>
                                     <li class="table_product seller_id">{{ order_item.cart_item.item.seller.user.get_short_name }}</li>
                                     <li class="table_product when_purchase">{{ order_item.order.timestamp|date:"m.d" }}</li>
                                     <li class="table_product price">{{ order_item.cart_item.line_item_total }}</li>
@@ -1252,7 +1252,7 @@
                                     </div>
                                     <div class="table_product_detail_right">
                                         <div class="table_product_detail_right_title">
-                                            <h2>[{{ order_item.cart_item.item.id }}]{{ order_item.cart_item.item.oneline_intro }}</h2>
+                                            <a href="/product/{{ order_item.cart_item.item.id }}"><h2>[{{ order_item.cart_item.item.id }}]{{ order_item.cart_item.item.oneline_intro }}</h2></a>
                                             <p>주문번호:{{ order_item.order.order_id }} &nbsp  판매자:{{ order_item.cart_item.item.seller.user.get_short_name }} &nbsp 구매날짜:{{ order_item.order.timestamp|date:"m.d" }} </p>
                                             <p>결제금액:{{ order_item.cart_item.line_item_total }} &nbsp 결제수단:{{ order_item.order.type }}</p>
                                         </div>
